--- a/Todo.DataAccess/packages.config
+++ b/Todo.DataAccess/packages.config
@@ -1,13 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0-alpha2" targetFramework="net45" />
-  <package id="EntityFramework.SqlServerCompact" version="6.0.0-alpha2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0-alpha3-20404" targetFramework="net45" />
+  <package id="EntityFramework.SqlServerCompact" version="6.0.0-alpha3-20404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.1.3-beta" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net45" />
 </packages>
