--- a/Todo.Hosting/packages.config
+++ b/Todo.Hosting/packages.config
@@ -2,13 +2,13 @@
 <packages>
   <package id="Autofac" version="3.0.1" targetFramework="net45" />
   <package id="Autofac.WebApi" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="4.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Tracing" version="4.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Tracing" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.1.3-beta" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.3.2" targetFramework="net45" />
