--- a/Todo.Services/packages.config
+++ b/Todo.Services/packages.config
@@ -1,16 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="2.2.0" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.0-alpha2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="4.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0-alpha3-20404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.1.3-beta" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
